grammar.js
    script: $ => repeat(choice(
      $.import_declaration,
      $.enum_declaration,
      $.typedef_declaration,
      $.class_declaration,
      $.mixin_declaration,
      $.interface_declaration,
      $.funcdef_declaration,
      $.virtual_property,
      $.variable_declaration,
      $.func_declaration,
      $.namespace_declaration,
      $.using_declaration,
      ";",
    )),

    // =========================================================================
    // IMPORT
    // =========================================================================
    scoped_identifier: $ => seq(
      optional("::"),
      $.identifier,
      repeat(seq("::", $.identifier, optional($.template_type_list))),
    ),

    // =========================================================================
    // NAMESPACE
    // =========================================================================
    class_declaration: $ => seq(
      repeat(field("modifier", $.declaration_modifier)),
      "class",
      field("name", $.identifier),
      choice(
        ";",
        seq(
          optional($.base_class_list),
          field("body", $.class_body),
        ),
      ),
    ),

    class_body: $ => seq(
      "{",
      repeat(choice(
        $.virtual_property,
        $.func_declaration,
        $.variable_declaration,
        $.funcdef_declaration,
        // stray ';' after a member (e.g. `void Foo() {};`) is tolerated by
        // the real compiler, same as at script scope.
        ";",
      )),
      "}",
    ),

    // =========================================================================
    // MIXIN
    // =========================================================================
    func_declaration: $ => prec.dynamic(2, seq(
      repeat(field("modifier", $.shared_external_modifier)),
      optional(choice("private", "protected")),
      optional(
        choice(
          seq(field("return_type", $.type), optional("&")),
          "~",
        ),
      ),
      field("name", $.identifier),
      field("parameters", $.parameter_list),
      optional("const"),
      optional($.func_attributes),
      choice(";", field("body", $.statement_block)),
    )),

    func_attributes: _ => repeat1(
      choice("override", "final", "explicit", "property", "delete"),
    ),

    shared_external_modifier: _ => choice("shared", "external"),

    // =========================================================================
    // VIRTUAL PROPERTY
    // =========================================================================
    variable_declaration: $ => prec.dynamic(1, seq(
      optional(choice("private", "protected")),
      field("var_type", $.type),
      $.variable_declarator,
      repeat(seq(",", $.variable_declarator)),
      ";",
    )),

    variable_declarator: $ => seq(
      field("name", $.identifier),
      optional(choice(
        seq("=", choice($.initializer_list, $._expression)),
        $.argument_list,
      )),
    ),

    // =========================================================================
    // STATEMENT BLOCK (stub — expanded in Step 3)
    // =========================================================================
    statement_block: $ => seq(
      "{",
      repeat(choice(
        $.variable_declaration,
        $._statement,
        $.using_declaration,
      )),
      "}",
    ),

    _statement: $ => choice(
      $.if_statement,
      $.for_statement,
      $.foreach_statement,
      $.while_statement,
      $.do_while_statement,
      $.switch_statement,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.try_statement,
      $.statement_block,
      $.expression_statement,
      ";",
    ),

    expression_statement: $ => seq(
      $._expression,
      ";",
    ),

    return_statement: $ => seq(
      "return",
      optional(choice($.initializer_list, $._expression)),
      ";",
    ),

    // =========================================================================
    // CONTROL FLOW STATEMENTS
    // =========================================================================

    // prec.right resolves dangling-else: else binds to innermost if
    parameter_list: $ => seq(
      "(",
      optional(commaSep1($.parameter)),
      ")",
    ),

    parameter: $ => seq(
      field("param_type", $.type),
      optional(seq("&", optional(choice("in", "out", "inout")))),
      choice(
        "...",
        seq(
          optional(field("name", $.identifier)),
          optional(seq("=", field("default_value", choice("void", $._expression)))),
        ),
      ),
    ),

    // =========================================================================
    // TYPE SYSTEM
    // =========================================================================
    type: $ => seq(
      optional("const"),
      optional($.scope),
      $.datatype,
      optional($.template_type_list),
      repeat(choice(
        seq("[", "]"),
        seq("@", optional("const")),
      )),
    ),

    datatype: $ => choice(
      $.identifier,
      $.primitive_type,
      "?",
      "auto",
    ),

    // =========================================================================
    // EXPRESSIONS — Full system with correct operator precedence
    //
    // Precedence table (low to high), per doc_script_precedence.md.
    // Note this deliberately differs from C: bitwise &|^ bind TIGHTER than
    // comparison/equality (avoids C's `a & b == c` gotcha), and xor/^^
    // shares a tier with equality/identity rather than sitting between
    // or and and.
    //   1  = += -= *= /= %= **= |= &= ^= <<= >>= >>>=  (right)
    //   2  ?: ternary                                     (right)
    //   3  || or                                          (left)
    //   4  && and                                         (left)
    //   5  == != is !is xor ^^                             (left)
    //   6  < <= > >=                                      (left)
    //   7  | (bitwise OR)                                 (left)
    //   8  ^ (bitwise XOR)                                (left)
    //   9  & (bitwise AND)                                (left)
    //  10  << >> >>>                                      (left)
    //  11  + - (binary)                                   (left)
    //  12  * / %                                          (left)
    //  13  ** (exponent)                                  (right)
    //  15  unary prefix: - + ! not ~ @ ++ --               (right)
    //  16  postfix: .member [index] () ++ --              (left)
    // =========================================================================
    _expression: $ => choice(
      $.assignment_expression,
      $.ternary_expression,
      $.binary_expression,
      $.unary_expression,
      $.postfix_expression,
      $.call_expression,
      $.member_expression,
      $.index_expression,
      $.functional_cast_expression,
      $.cast_expression,
      $.construct_call_expression,
      $.lambda_expression,
      $.parenthesized_expression,
      $.number_literal,
      $.concatenated_string,
      $.string_literal,
      $.boolean_literal,
      $.null_literal,
      $.this_expression,
      $.scoped_identifier,
    ),

    call_expression: $ => prec.left(16, seq(
      field("function", $._expression),
      field("arguments", $.argument_list),
    )),

    // --- Member access (prec 16) ---
    argument_list: $ => seq(
      "(",
      commaSep(seq(
        optional(seq(field("arg_name", $.identifier), ":")),
        // 'void' argument: func(void) — ignores an output value
        choice($.initializer_list, $.typed_initializer_list, "void", $._expression),
      )),
      ")",
    ),

    // =========================================================================
    // LITERALS
    // =========================================================================
    number_literal: _ => {
      const hex = /0[xX][0-9a-fA-F]+/;
      const octal = /0[oO][0-7]+/;
      const binary = /0[bB][01]+/;
      const explicit_decimal = /0[dD][0-9]+/;
      const decimal_float = choice(
        /[0-9]+\.[0-9]*([eE][+-]?[0-9]+)?[fFdD]?/,
        /[0-9]*\.[0-9]+([eE][+-]?[0-9]+)?[fFdD]?/,
        /[0-9]+[eE][+-]?[0-9]+[fFdD]?/,
        /[0-9]+[fFdD]/,
      );
      const decimal_int = /[0-9]+/;
      return token(choice(hex, octal, binary, explicit_decimal, decimal_float, decimal_int));
    },

    // =========================================================================
    // PRIMITIVES
    // =========================================================================
    primitive_type: _ => choice(
      "void", "int", "int8", "int16", "int32", "int64", "uint",
      "uint8", "uint16", "uint32", "uint64", "float", "double", "bool",
    ),

    preproc_directive: _ => token(seq("#", /[^\r\n]*/)),

    identifier: _ => /[A-Za-z_][A-Za-z0-9_]*/,
  },
});
